2005-07-20  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc: Base_DB::set_database_preferences(): Save 
	the title into the document as well as the database, for the 
	window title, and for database recreation.

2005-07-20  Murray Cumming  <murrayc@murrayc.com>

	* glom/data_structure/relationship.cc:
	* glom/data_structure/relationship.h: Added get/set_allow_edit() 
	* glom/data_structure/layout/layoutitem_field.cc: 
	get_editable_and_allowed(): Also check the relationship, if any.
	* glom/document/document_glom.cc: Load/Save the allow_edit of 
	the relationship.
	* glom/mode_design/box_db_table_relationships.cc:
	* glom/mode_design/box_db_table_relationships.h: Add a column 
	for allow_edit, so relationships can prevent editing of 
	related fields.

2005-07-20  Murray Cumming  <murrayc@murrayc.com>

	* glom/document/document_glom.cc: fill_layout_field_details():
	Get field details from the appropriate table, even if it is a 
	related field. This stops us losing related fields on layouts.

2005-07-19  Murray Cumming  <murrayc@murrayc.com>

	* glom/utils.cc: build_sql_select(): Use AS to create an 
	alias name for the related table, so we can use two 
	relationships to the same table.

0.8.35:

2005-07-18  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data.cc: set_field_value_in_database(): 
	Use the related table name if it is a related table.
	add_related_record_for_field(): Added some warnings.
	* glom/mode_data/box_data_details.cc: 
	get_primary_key_value_selected(): Actually return the field, 
	instead of a null field.
	get_field_primary_key(): Return true instead of false, to 
	indicate success. This fixes automatic related-field setting. 
	* glom/utility_widgets/imageglom.cc:

2005-07-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/box_db_table_relationships.cc:
	* glom/mode_design/box_db_table_relationships.h: Add a suitable 
	capitalized title when adding a relationship name.
